<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <EditText
        android:id="@+id/Regx_express"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top|left|center"
        android:hint="@string/Regx_express"
        android:lines="2" >
    </EditText>

    <EditText
        android:id="@+id/Text_source"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:ems="10"
        android:gravity="top|left|center"
        android:hint="@string/Text_source" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Matchs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/Next_match"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/Next_Match" />
    </LinearLayout>

</LinearLayout>